--- a/admin.html
+++ b/admin.html
@@ -13,7 +13,10 @@
 	<div class="row">
 
 		<div class="col-sm-12 col-md-9 col-lg-9">
-			<h2>Kommentare</h2>
+			<div class="container-relative">
+				<div class="container-right">Clients: <span id="stats-clients">?</span></div>
+				<h2>Kommentare</h2>
+			</div>
 			<div class="row cols-sm">
 				<input id="comment-edit" type="text" placeholder="&#128172; Neuer Kommentar" />
 			</div>
