--- a/index.html
+++ b/index.html
@@ -8,27 +8,28 @@
 	<link href="css/style.css" rel="stylesheet" />
 	<script src="js/paho-mqtt-min.js" type="text/javascript"></script>
 	<script src="js/functions.js" type="text/javascript"></script>
-	<style>
-	</style>
+	<!-- templates -->
+	<script id="template-note" type="text/template">
+		<div id="note-top" class="card fluid warning"><h2 class="section">{{text}}</h2></div>
+	</script>
+	<script id="template-message" type="text/template">
+		<div id="message-{{id}}" class="card fluid">
+			<blockquote class="section">{{text}}</blockquote>
+			<mark class="tag tertiary absolute-top-right">{{likes}}</mark>
+			<div class="buttons">
+				<button id="button-like" class="small tertiary" data-id="{{id}}">&#128077; Like</button>
+			</div>
+		</div>
+	</script>
 </head>
 <body>
 	<div class="with-footer">
 		<div id="note-stream"></div>
 		<div id="message-stream" class="row cols-sm-12 cols-md-6 cols-lg-4"></div>
 	</div>
-	<footer>
-		<div class="row">
-			<input id="comment-edit" type="text" placeholder="&#128172; Mein Kommentar" class="col-sm" />
-		</div>
+	<footer class="input-group fluid">
+		<input id="comment-edit" type="text" placeholder="&#128172; Mein Kommentar" />
 	</footer>
-
 	<span id="toast" class="toast">Laden</span>
-
-	<div id="template-note" class="hidden">
-		<div class="card fluid warning"><h2 class="section"></h2></div>
-	</div>
-	<div id="template-message" class="hidden">
-		<div><blockquote></blockquote></div>
-	</div>
 </body>
 </html>
