--- a/presenter.html
+++ b/presenter.html
@@ -8,20 +8,22 @@
 	<link href="css/style.css" rel="stylesheet" />
 	<script src="js/paho-mqtt-min.js" type="text/javascript"></script>
 	<script src="js/functions.js" type="text/javascript"></script>
+	<!-- templates -->
+	<script id="template-note" type="text/template">
+		<div id="note-top" class="card fluid warning"><h2 class="section">{{text}}</h2></div>
+	</script>
+	<script id="template-message" type="text/template">
+		<div id="message-{{id}}" class="card">
+			<blockquote class="section">{{text}}</blockquote>
+			<mark class="tag tertiary absolute-top-right">{{likes}}</mark>
+		</div>
+	</script>
 </head>
 <body>
 	<div>
 		<div id="note-stream"></div>
 		<div id="message-stream" class="row cols-sm-12 cols-md-6 cols-lg-4"></div>
 	</div>
-
 	<span id="toast" class="toast">Laden</span>
-
-	<div id="template-note" class="hidden">
-		<div class="card fluid warning"><h2 class="section"></h2></div>
-	</div>
-	<div id="template-message" class="hidden">
-		<div><blockquote></blockquote></div>
-	</div>
 </body>
 </html>
