--- a/admin.html
+++ b/admin.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
 	<title>Admin</title>
 	<meta charset="utf-8" />
@@ -8,6 +9,7 @@
 	<link href="css/style.css" rel="stylesheet" />
 	<script src="js/paho-mqtt-min.js" type="text/javascript"></script>
 	<script src="js/functions.js" type="text/javascript"></script>
+
 	<!-- templates -->
 	<script id="template-comment" type="text/template">
 		<div class="card fluid">
@@ -25,11 +27,13 @@
 		<div id="message-{{id}}">
 			<blockquote>
 				{{text}}
-				<mark class="tag tertiary absolute-top-right">{{likes}}</mark>
+				<mark class="tag tertiary absolute-top-right">&#128077; {{likes}}</mark>
 			</blockquote>
 		</div>
 	</script>
+
 </head>
+
 <body>
 	<div class="row">
 		<div class="col-sm-12 col-md-9 col-lg-9">
@@ -53,4 +57,5 @@
 	</div>
 	<span id="toast" class="toast">Laden</span>
 </body>
+
 </html>
