--- a/presenter.html
+++ b/presenter.html
@@ -12,7 +12,7 @@
 
 	<!-- templates -->
 	<script id="template-note" type="text/template">
-		<div id="note-top" class="card fluid warning"><h2 class="section">{{text}}</h2></div>
+		<div id="note-top" class="card fluid warning"><h2>{{text}}</h2></div>
 	</script>
 	<script id="template-message" type="text/template">
 		<div id="message-{{id}}">
