--- a/admin.html
+++ b/admin.html
@@ -46,7 +46,7 @@
 			<div class="input-group fluid">
 				<input data-bind-keypress="sendComment" type="text" placeholder="&#128172; Neuer Kommentar" />
 			</div>
-			<div id="comment-stream" class="row cols-sm-4"></div>
+			<div id="comment-stream" class="row cols-sm-12 cols-md-4"></div>
 		</div>
 		<div class="col-sm-12 col-md-4">
 			<h2>Vorschau</h2>
