fix message deletion

--- a/admin.html
+++ b/admin.html
@@ -31,7 +31,7 @@
 				{{text}}
 				<div class="absolute-top-right">
 					<mark class="tag tertiary">&#128077; {{likes}}</mark>
-					<mark data-bind-click="deleteMessage" class="button tag secondary">Löschen</mark>
+					<mark data-id="{{id}}" data-bind-click="deleteMessage" class="button tag secondary">Löschen</mark>
 				</div>
 			</blockquote>
 		</div>
