--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div id="message-stream" class="row cols-sm-12 cols-md-6 cols-lg-4"></div>
 	</div>
 	<footer class="input-group fluid">
-		<input data-bind-keypress="sendComment" type="text" placeholder="&#128172; Mein Kommentar" />
+		<input data-bind-keypress="sendComment" type="text" placeholder="&#128172; Meine Nachricht" />
 	</footer>
 	<span id="toast" class="toast">Laden</span>
 </body>
