--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 	</script>
 	<script id="template-likes-loading" type="text/template">
-		<div id="likes-{{id}}" class="spinner"></div>
+		<div id="likes-{{id}}" class="spinner tertiary"></div>
 	</script>
 
 </head>
