--- a/admin.html
+++ b/admin.html
@@ -16,8 +16,8 @@
 			<blockquote cite="{{date}}">
 				{{text}}
 				<div class="absolute-top-right">
-					<mark data-id="{{id}}" data-bind-click="takeComment" class="button tag tertiary">Übernehmen</mark>
-					<mark data-id="{{id}}" data-bind-click="deleteComment" class="button tag secondary">Löschen</mark>
+					<button data-id="{{id}}" data-bind-click="takeComment" class="tag tertiary">Übernehmen</button>
+					<button data-id="{{id}}" data-bind-click="deleteComment" class="tag secondary">Löschen</button>
 				</div>
 			</blockquote>
 		</div>
@@ -31,7 +31,7 @@
 				{{text}}
 				<div class="absolute-top-right">
 					<mark class="tag tertiary">&#128077; {{likes}}</mark>
-					<mark data-id="{{id}}" data-bind-click="deleteMessage" class="button tag secondary">Löschen</mark>
+					<button data-id="{{id}}" data-bind-click="deleteMessage" class="tag secondary">Löschen</button>
 				</div>
 			</blockquote>
 		</div>
@@ -44,7 +44,10 @@
 		<div class="col-sm-12 col-md-8">
 			<div class="container-relative">
 				<div class="container-right">Clients: <span id="stats-clients">?</span></div>
-				<h2>Eingang <tiny><a href="index.html" target="_blank">&#128279;</a></tiny></h2>
+				<h2>
+					Eingang
+					<tiny><a href="index.html" target="_blank">&#128279;</a></tiny>
+				</h2>
 			</div>
 			<div class="input-group fluid">
 				<input data-bind-keypress="sendComment" type="text" placeholder="&#128172; Neue Nachricht" />
@@ -52,7 +55,10 @@
 			<div id="comment-stream" class="row cols-sm-12 cols-lg-6"></div>
 		</div>
 		<div class="col-sm-12 col-md-4">
-			<h2>Ausgang <tiny><a href="presenter.html" target="_blank">&#128279;</a></tiny></h2>
+			<h2>
+				Ausgang
+				<tiny><a href="presenter.html" target="_blank">&#128279;</a></tiny>
+			</h2>
 			<div class="input-group fluid">
 				<input data-bind-keypress="sendNote" type="text" placeholder="&#128172; Neue Info" />
 			</div>
