--- a/admin.html
+++ b/admin.html
@@ -42,8 +42,8 @@
 <body data-is-admin="true">
 	<div class="row">
 		<div class="col-sm-12 col-md-8">
-			<div class="container-relative">
-				<div class="container-right">Clients: <span id="stats-clients">?</span></div>
+			<div class="relative">
+				<span class="absolute-top-right">Clients: <span id="stats-clients">?</span></span>
 				<h2>
 					Eingang
 					<tiny><a href="index.html" target="_blank">&#128279;</a></tiny>
