--- a/presenter.html
+++ b/presenter.html
@@ -28,7 +28,7 @@
 <body>
 	<div>
 		<div id="note-stream"></div>
-		<div id="message-stream" class="row cols-sm-12 cols-md-6 cols-lg-4 sorted"></div>
+		<div id="message-stream" data-sortby="likes" class="row cols-sm-12 cols-md-6 cols-lg-4"></div>
 	</div>
 	<span id="toast" class="toast">Laden</span>
 </body>
