--- a/presenter.html
+++ b/presenter.html
@@ -15,7 +15,7 @@
 		<div id="note-top" class="card fluid warning"><h2>{{text}}</h2></div>
 	</script>
 	<script id="template-message" type="text/template">
-		<div id="message-{{id}}">
+		<div id="message-{{id}}" data-orderid="{{likes}}">
 			<blockquote>
 				{{text}}
 				<mark class="tag tertiary absolute-top-right">&#128077; {{likes}}</mark>
