--- a/admin.html
+++ b/admin.html
@@ -2,71 +2,89 @@
 <html>
 
 <head>
-	<title>Admin</title>
+	<title>Moderator</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link href="css/mini-dark.min.css" rel="stylesheet" />
-	<link href="css/style.css" rel="stylesheet" />
+	<link href="css/bootstrap.cyborg.min.css" rel="stylesheet" />
 	<script src="js/paho-mqtt-min.js" type="text/javascript"></script>
 	<script src="js/functions.js" type="text/javascript"></script>
 
 	<!-- templates -->
 	<script id="template-comment" type="text/template">
-		<div id="comment-{{id}}">
-			<blockquote cite="{{date}}">
-				{{text}}
-				<div class="absolute-top-right">
-					<button data-id="{{id}}" data-bind-click="takeComment" class="tag tertiary">Übernehmen</button>
-					<button data-id="{{id}}" data-bind-click="deleteComment" class="tag secondary">Löschen</button>
-				</div>
-			</blockquote>
+		<div id="comment-{{id}}" class="card mb-3 mr-3">
+			<div class="card-body">
+				<div class="card-text">{{text}}</div>
+				<div class="card-text"><small class="text-muted">{{date}}</small></div>
+			</div>
+			<div class="card-footer text-right">
+				<button data-id="{{id}}" data-bind-click="takeComment" class="btn btn-sm btn-success">Übernehmen</button>
+				<button data-id="{{id}}" data-bind-click="deleteComment" class="btn btn-sm btn-danger">Löschen</button>
+			</div>
 		</div>
 	</script>
 	<script id="template-note" type="text/template">
-		<div id="note-top" class="card fluid warning"><h2>{{text}}</h2></div>
+		<div id="note-top" class="card bg-primary text-white mb-3 w-100">
+			<div class="card-body text-center p-2"><h5 class="m-0">{{text}}</h5></div>
+		</div>
 	</script>
 	<script id="template-message" type="text/template">
-		<div id="message-{{id}}">
-			<blockquote>
-				{{text}}
-				<div class="absolute-top-right">
-					<mark class="tag tertiary">&#128077; {{likes}}</mark>
-					<button data-id="{{id}}" data-bind-click="deleteMessage" class="tag secondary">Löschen</button>
+		<div id="message-{{id}}" class="card mb-3 w-100">
+			<div class="card-body">
+				<div class="float-right">
+					<span class="badge badge-success p-2">&#128077; {{likes}}</span>
 				</div>
-			</blockquote>
+				<div class="card-text">{{text}}</div>
+			</div>
+			<div class="card-footer text-right">
+				<button data-id="{{id}}" data-bind-click="deleteMessage" class="btn btn-sm btn-danger">Löschen</button>
+			</div>
+		</div>
+	</script>
+	<script id="template-toast" type="text/template">
+		<div id="toast" class="toast text-center bg-secondary text-white rounded-pill fixed-bottom mx-auto my-3" style="opacity:1;">
+			<div class="toast-body">{{text}}</div>
 		</div>
 	</script>
 
 </head>
 
-<body data-is-admin="true">
-	<div class="row">
-		<div class="col-sm-12 col-md-8">
-			<div class="relative">
-				<span class="absolute-top-right">Clients: <span id="stats-clients">?</span></span>
-				<h2>
-					Eingang
-					<tiny><a href="index.html" target="_blank">&#128279;</a></tiny>
-				</h2>
+<body id="toast-host" data-is-admin="true">
+	<div class="container-fluid pt-3">
+		<div class="row">
+			<div class="col-lg-7 pr-lg-2">
+				<div class="container-fluid">
+					<div class="row">
+						<h4 class="col pl-0">
+							Eingang
+							<small><a href="index.html" target="_blank">&#128279;</a></small>
+						</h4>
+						<div class="col text-right text-muted pr-0">Clients: <span id="stats-clients">?</span></div>
+					</div>
+					<div class="form-group row">
+						<input data-bind-keypress="sendComment" type="text" placeholder="&#128172; Neue Nachricht"
+							class="form-control" />
+					</div>
+					<div id="comment-stream" class="row"></div>
+				</div>
 			</div>
-			<div class="input-group fluid">
-				<input data-bind-keypress="sendComment" type="text" placeholder="&#128172; Neue Nachricht" />
+			<div class="col-lg-5 pl-lg-2">
+				<div class="container-fluid">
+					<div class="row">
+						<h4>
+							Ausgang
+							<small><a href="presenter.html" target="_blank">&#128279;</a></small>
+						</h4>
+					</div>
+					<div class="form-group row">
+						<input data-bind-keypress="sendNote" type="text" placeholder="&#128172; Neue Info"
+							class="form-control" />
+					</div>
+					<div id="note-stream" class="row"></div>
+					<div id="message-stream" class="row"></div>
+				</div>
 			</div>
-			<div id="comment-stream" class="row cols-sm-12 cols-lg-6"></div>
-		</div>
-		<div class="col-sm-12 col-md-4">
-			<h2>
-				Ausgang
-				<tiny><a href="presenter.html" target="_blank">&#128279;</a></tiny>
-			</h2>
-			<div class="input-group fluid">
-				<input data-bind-keypress="sendNote" type="text" placeholder="&#128172; Neue Info" />
-			</div>
-			<div id="note-stream"></div>
-			<div id="message-stream" class="row cols-sm-12 cols-lg-6"></div>
 		</div>
 	</div>
-	<span id="toast" class="toast">Laden</span>
 </body>
 
 </html>
