--- a/presenter.html
+++ b/presenter.html
@@ -5,32 +5,39 @@
 	<title>Presenter</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link href="css/mini-dark.min.css" rel="stylesheet" />
-	<link href="css/style.css" rel="stylesheet" />
+	<link href="css/bootstrap.cyborg.min.css" rel="stylesheet" />
 	<script src="js/paho-mqtt-min.js" type="text/javascript"></script>
 	<script src="js/functions.js" type="text/javascript"></script>
 
 	<!-- templates -->
 	<script id="template-note" type="text/template">
-		<div id="note-top" class="card fluid warning"><h2>{{text}}</h2></div>
+		<div id="note-top" class="card bg-primary text-white mb-3 w-100">
+			<div class="card-body text-center p-2"><h6 class="m-0">{{text}}</h6></div>
+		</div>
 	</script>
 	<script id="template-message" type="text/template">
-		<div id="message-{{id}}" data-orderid="{{likes}}">
-			<blockquote>
-				{{text}}
-				<mark class="tag tertiary absolute-top-right">&#128077; {{likes}}</mark>
-			</blockquote>
+		<div id="message-{{id}}" data-orderid="{{likes}}" class="card text-white mb-3 w-100">
+			<div class="card-body p-2">
+				<div class="float-right ml-2">
+					<span class="badge badge-success p-2">&#128077; {{likes}}</span>
+				</div>
+				<div class="card-text">{{text}}</div>
+			</div>
+		</div>
+	</script>
+	<script id="template-toast" type="text/template">
+		<div id="toast" class="toast text-center bg-secondary text-white rounded-pill fixed-bottom mx-auto my-3" style="opacity:1">
+			<div class="toast-body">{{text}}</div>
 		</div>
 	</script>
 
 </head>
 
-<body>
-	<div>
+<body id="toast-host">
+	<div class="container-fluid pt-3">
 		<div id="note-stream"></div>
-		<div id="message-stream" class="row cols-sm-12"></div>
+		<div id="message-stream"></div>
 	</div>
-	<span id="toast" class="toast">Laden</span>
 </body>
 
 </html>
