--- a/presenter.html
+++ b/presenter.html
@@ -6,12 +6,13 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="css/bootstrap.cyborg.min.css" rel="stylesheet" />
+	<link href="css/styles.css" rel="stylesheet" />
 	<script src="js/paho-mqtt-min.js" type="text/javascript"></script>
 	<script src="js/functions.js" type="text/javascript"></script>
 
 	<!-- templates -->
 	<script id="template-note" type="text/template">
-		<div id="note-top" class="card bg-primary text-white mb-3 w-100">
+		<div id="note-top" class="card bg-primary text-white colors-event mb-3 w-100">
 			<div class="card-body text-center p-2"><h6 class="m-0">{{text}}</h6></div>
 		</div>
 	</script>
@@ -19,7 +20,7 @@
 		<div id="message-{{id}}" data-orderid="{{likes}}" class="card text-white mb-3 w-100">
 			<div class="card-body p-2">
 				<div class="float-right ml-2">
-					<span class="badge badge-success p-2">&#128077; {{likes}}</span>
+					<span class="badge badge-success colors-event p-2">&#128077; {{likes}}</span>
 				</div>
 				<div class="card-text">{{text}}</div>
 			</div>
