add jesushouse style

--- a/admin.html
+++ b/admin.html
@@ -24,7 +24,7 @@
 		</div>
 	</script>
 	<script id="template-note" type="text/template">
-		<div id="note-top" class="card bg-primary text-white colors-event mb-3 w-100">
+		<div id="note-top" class="card bg-primary text-white mb-3 w-100">
 			<div class="card-body text-center p-2"><h6 class="m-0">{{text}}</h6></div>
 		</div>
 	</script>
@@ -32,7 +32,7 @@
 		<div id="message-{{id}}" data-orderid="{{likes}}" class="card mb-3 w-100">
 			<div class="card-body">
 				<div class="float-right">
-					<span class="badge badge-success colors-event p-2">&#128077; {{likes}}</span>
+					<span class="badge badge-success p-2">&#128077; {{likes}}</span>
 				</div>
 				<div class="card-text">{{text}}</div>
 			</div>
