add highlight function

--- a/admin.html
+++ b/admin.html
@@ -37,6 +37,7 @@
 				<div class="card-text">{{text}}</div>
 			</div>
 			<div class="card-footer text-right">
+				<button data-id="{{id}}" data-bind-click="highlightMessage" class="btn btn-sm btn-success">Hervorheben</button>
 				<button data-id="{{id}}" data-bind-click="deleteMessage" class="btn btn-sm btn-danger">Löschen</button>
 			</div>
 		</div>
