--- a/presenter.html
+++ b/presenter.html
@@ -45,8 +45,13 @@
 			<tr>
 				<td id="highlight-stream" class="align-middle"></td>
 			</tr>
+			<tr>
+				<td class="text-center" style="height:1%">
+					<small><a href="#message-stream" class="text-muted">Alle Nachrichten siehe weiter unten</a></small>
+				</td>
+			</tr>
 		</table>
-		<div id="message-stream" class="mt-3"></div>
+		<div id="message-stream" class="pt-3"></div>
 	</div>
 </body>
 
